# gram-cli

./: Cargo.toml  LICENSE  README.md
.github/gram/: settings.toml
.github/workflows/: build.yml  security_audit.yml  validate-settings.yml
example/: settings.toml  wayofthepie.toml
src/: commands.rs  github.rs  main.rs
src/commands/: diff.rs  mod.rs  settings.rs
src/commands/settings/: diff.rs  mod.rs
src/commands/settings/diff/: mod.rs  retrieve.rs
src/github/: mod.rs
