[package]
name = "gram"
version = "0.1.0"
authors = ["Stephen OBrien <wayofthepie@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.27"
async-trait = "0.1.24"
openssl-sys = { version = "0.9.54", features = ["vendored"] }
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
structopt = "0.3.11"
tokio = { version = "0.2.13", features = ["macros"] }
toml = "0.5.6"

[dev-dependencies]
speculate = "0.1.2"

