[package]
name = "gram-cli"
version = "0.1.0"
description = """
gram is a cli for automating github interactions.
"""
authors = [ "Stephen OBrien <wayofthepie@users.noreply.github.com>" ]
edition = "2018"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/wayofthepie/gram-cli"
repository = "https://github.com/wayofthepie/gram-cli"

[dependencies]
anyhow = "1.0.27"
async-trait = "0.1.24"
openssl-sys = { version = "0.9.54", features = [ "vendored" ] }
reqwest = { version = "0.10.4", features = [ "json" ] }
serde = { version = "1.0.104", features = [ "derive" ] }
structopt = "0.3.11"
tokio = { version = "0.2.13", features = [ "macros" ] }
toml = "0.5.6"

[[bin]]
name = "gram"
path = "src/main.rs"

[dev-dependencies]
http = "0.2.0"
mockito = "0.23.3"
pretty_assertions = "0.6.1"

serde_json = "1.0.48"
